@@ -1,3 +1,9 @@
+2001-01-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* slab.h: Add support for parameter getting/setting.
+	* slab.cpp: Ditto.
+	* slabdisp.cpp: Ditto.
+
 2001-11-27  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* slabmode.cpp: Fix signs.
